<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">Sinet App</string>    
    <string name="lightning">Natural Lightning</string>
    <string name="color_baloons">Color Baloons</string>
    <string name="natural_wall">Natural Wall</string>
    <string name="siis">SIIS Updates</string>
    <string name="conf">Conferences, Trainings and Events</string>
    <string name="indus">Industry News</string>
    <string name="prod">Products</string>
    <string name="bestpr">Best Practices</string>
    
    <string-array name="menu_array">
        <item>Home</item>
        <item>SIIS</item>
        <item>Products</item>
        <item>Conferences &amp; Events</item>
        <item>Industry News</item>
        <item>Surveys</item>
    </string-array>
<string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>