<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:paddingTop="10dp"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ViewFlipper
        android:id="@+id/view_flipper"        
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:padding="1dp"
        android:background="#CECCCC"
                android:layout_height="150dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:tag="0"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/siisIMG"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"      
                         
                android:src="@drawable/siis" />            
            <TextView
                style="@style/ImageTitle"
                android:id="@+id/siisTXT"
                android:layout_alignParentLeft="true"
                 android:text="@string/siis"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
             android:tag="1"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/confIMG"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
               
                android:src="@drawable/conf" />

            <TextView
                style="@style/ImageTitle"
                android:id="@+id/confTXT"
                android:layout_alignParentLeft="true"
                android:text="@string/conf" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:tag="2"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/indusIMG"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                
                android:src="@drawable/ind" />

            <TextView
                style="@style/ImageTitle"
                android:id="@+id/indusIMG"
                android:layout_alignParentLeft="true"
                android:text="@string/indus" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
                 android:tag="3"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/prodIMG"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
           
                android:src="@drawable/prod" />

            <TextView
                style="@style/ImageTitle"
                android:id="@+id/prodIMG"
                android:layout_alignParentLeft="true"
                android:text="@string/prod" />
        </RelativeLayout>
         <RelativeLayout
            android:layout_width="fill_parent"
              android:tag="4"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/bestPrIMG"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"              
                android:src="@drawable/bestpr" />

            <TextView
                style="@style/ImageTitle"
                android:id="@+id/bestPrIMG"
                android:layout_alignParentLeft="true"
                android:text="@string/bestpr" />
        </RelativeLayout>
    </ViewFlipper>

    
    

<LinearLayout 
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        
        >    
            <LinearLayout	  
	      	    
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"	    	    	    	  
	    android:orientation="horizontal">
	    
	    <RelativeLayout	        
	        android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight=".48"	       
        	android:layout_marginRight="5dp"        		         	      
	        >
		    <ImageView
		        android:id="@+id/conferencesIMGTab"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"	        	        
		        android:src="@drawable/conferences"></ImageView>
	    </RelativeLayout>
	   	 <RelativeLayout
	        android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight=".48"
			android:layout_marginLeft="5dp"
			
			  		        	        	
	        >
	    <ImageView
	        android:id="@+id/industryNewsIMGTab"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"	        	        
	        android:src="@drawable/industry_news"></ImageView>
	    </RelativeLayout>
	</LinearLayout>   
        
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        
        >           
        <LinearLayout
	    
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"	    	      
	    android:orientation="horizontal">
	    
		    <RelativeLayout	        
		        android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:layout_weight=".48"	       
	        	android:layout_marginRight="5dp">
			    <ImageView
			        android:id="@+id/productsIMGTab"
			        android:layout_height="match_parent"
			        android:layout_width="match_parent"	        	        
			        android:src="@drawable/products"></ImageView>
		    </RelativeLayout>
		   	 <RelativeLayout
		        android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:layout_weight=".48"
				android:layout_marginLeft="5dp">
		    <ImageView
		        android:id="@+id/bestPracticesIMGTab"
		        android:layout_height="match_parent"
		        android:layout_width="match_parent"	        	        
		        android:src="@drawable/best_practices"></ImageView>
		    </RelativeLayout>
    </LinearLayout>
    
	</RelativeLayout>
</LinearLayout>
</LinearLayout>
	<!-- <LinearLayout	  
	      	    
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:layout_marginLeft="20dp"
	    android:background="#00ffaa"
	    android:layout_marginRight="20dp"	   
	    android:orientation="horizontal">
	    
	    <RelativeLayout	        
	        android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight=".5"	       
        	android:layout_marginRight="5dp"        		         	      
	        >
		    <ImageView
		        android:id="@+id/conferencesIMGTab"
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"	        	        
		        android:src="@drawable/conferences"></ImageView>
	    </RelativeLayout>
	   	 <RelativeLayout
	        android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight=".5"
			android:layout_marginLeft="5dp"
			
			  		        	        	
	        >
	    <ImageView
	        android:id="@+id/industryNewsIMGTab"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"	        	        
	        android:src="@drawable/industry_news"></ImageView>
	    </RelativeLayout>
	</LinearLayout>
	
	<LinearLayout
	    
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"	   
	    android:orientation="horizontal">
	    
	    <RelativeLayout	        
	        android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1.1"	       
        	android:layout_marginRight="5dp" 
        	android:layout_marginTop="-150dp"	        
	        >
		    <ImageView
		        android:id="@+id/productsIMGTab"
		        android:layout_height="match_parent"
		        android:layout_width="match_parent"	        	        
		        android:src="@drawable/products"></ImageView>
	    </RelativeLayout>
	   	 <RelativeLayout
	        android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1.1"
			android:layout_marginLeft="5dp" 
			android:layout_marginTop="-150dp"       		        	        	
	        >
	    <ImageView
	            android:id="@+id/bestPracticesIMGTab"
	        android:layout_height="match_parent"
	        android:layout_width="match_parent"	        	        
	        android:src="@drawable/best_practices"></ImageView>
	    </RelativeLayout>
	</LinearLayout> -->
	
	
   
